--- a/index.html
+++ b/index.html
@@ -44,7 +44,48 @@
         </div>
     </div>
     <div class="form-container">
-
+        <div class="left-form-container">
+            <div class="form-container-text">
+                <h2> Become a Dog Walker with Wag!</h2>
+                <span>
+                    Join our community of over 400K Pet Caregivers nationwide
+                </span>
+                <img src="img/all-team.webp" alt="">
+            </div>
+        </div>
+        <div class="right-form-container">
+            <div class="module-container">
+                <div class="header-module">Please enter your name as it appears on your ID.
+                </div>
+                <div class="module-question">
+                    <input class="first-module" placeholder="Legal first name" >
+                </div>
+                <div class="module-questions">
+                    <input class="first-module" placeholder="Legal middle name" >
+                </div>
+                <div class="module-questions">
+                    <input class="first-module" placeholder="Legal last name" >
+                </div>
+                <div class="module-questions">
+                    <input class="first-module" placeholder="Email address" >
+                </div>
+                <div class="module-questions">
+                    <input class="first-module " placeholder="Phone number" type="number" >
+                </div>
+                <div class="module-rule">By submitting my phone number, I agree to receive automated and non-automated transactional and marketing calls/texts from Wag!. Consent not required; text STOP to 24006 to opt out. Opt out instructions subject to change. Message and data rates may apply.<a style="color: #00BF8F; text-decoration: none" href="https://safety.wagwalking.com/terms-pet-caregiver-mobile ">Mobile Terms</a>  apply.
+                </div>
+                <div class="module-policy">
+                    <input type="checkbox"> I agree to Wag!'s <a style="color: #00BF8F; text-decoration: none" href="https://safety.wagwalking.com/terms-pet-caregiver-mobile ">Terms</a> (including a <a style="color: #00BF8F; text-decoration: none" href="https://safety.wagwalking.com/terms-pet-caregiver-mobile ">mutual arbitration clause</a>) and  <a style="color: #00BF8F; text-decoration: none" href="https://safety.wagwalking.com/terms-pet-caregiver-mobile ">Privacy Policy</a>
+                    </input>
+                </div>
+                <div class="module-policy">
+                    <input type="checkbox"> I confirm that I am a US resident and am over 18</input>
+                </div>
+                <div class="button-start">
+                    <button class="btn-start" type="disabled">Get Started</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
