--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <input class="first-module" placeholder="Email address" >
                 </div>
                 <div class="module-questions">
-                    <input class="first-module " placeholder="Phone number" type="number" >
+                    <input class="first-module " placeholder="Phone number" type="tel">
                 </div>
                 <div class="module-rule">By submitting my phone number, I agree to receive automated and non-automated transactional and marketing calls/texts from Wag!. Consent not required; text STOP to 24006 to opt out. Opt out instructions subject to change. Message and data rates may apply.<a style="color: #00BF8F; text-decoration: none" href="https://safety.wagwalking.com/terms-pet-caregiver-mobile ">Mobile Terms</a>  apply.
                 </div>
@@ -85,6 +85,57 @@
                     <button class="btn-start" type="disabled">Get Started</button>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="explanation-container">
+        <div class="header-explanation">
+            <div class="h-explanation">Why Wag!?</div>
+            <div class="second-container">
+                <div class="explanation">
+                    <img src="img/1-icon.svg" alt="">
+                    <div class="t-explanation">Flexibility</div>
+                    <div class="explanation-text ">Make money on your own time. Set your own schedule. Enjoy the flexibility of choosing how and when you want to work—grab a last minute ASAP walk or plan out walks weeks in advance!
+                    </div>
+                </div>
+                <div class="explanation">
+                    <img src="img/2-icon.svg" alt="">
+                    <div class="t-explanation">Technology</div>
+                    <div class="explanation-text">Wag! is a fast, friendly, and convenient platform that offers instant pay, real-time GPS tracking, automated report cards, and live chat with clients.
+                    </div>
+                </div>
+                <div class="explanation">
+                    <img src="img/3-icon.svg" alt="">
+                    <div class="t-explanation">Safety</div>
+                    <div class="explanation-text">Our dedicated 24/7 customer support team sticks by you, and services booked on the Wag! platform may be protected with up to $1M property damage protection. See the customer claims policy for details.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="work">
+        <div class="work-container">
+            <div class="left-work-container">
+                <div class="work-text">
+                    <p class="work-header">Love dogs? Get paid for it!</p>
+                    <p class="work-mid-text">Caring for dogs is what you do best. Connecting dog walkers, sitters, and trainers with a nationwide community of pet parents who have dog walking, overnight sitting & boarding, or training needs is what we do best. Build your business and become your own boss with Wag!.
+                    </p>
+                    <p class="bottom-work-text"><a style="color: rgb(0, 191, 143); text-decoration: none" href="https://safety.wagwalking.com/terms-pet-caregiver-mobile ">Meet some Pet Caregivers who walk for Wag!</a>
+                    </p>
+                </div>
+            </div>
+            <div class="right-work-container">
+                <div class="work-img">
+                    <img src="img/become-a-walker-partner-program-f261b8b128cfd6d86b2a8e8c634cd05f.webp" alt="" class="src">
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <img src="img/back.svg" alt="" class="src">
+    <div class="footer">
+        <div class="footer-container">
+            <p class="footer-header">Hear from Pet Caregivers like you
+            </p>
         </div>
     </div>
 </div>
