--- a/index.html
+++ b/index.html
@@ -128,14 +128,120 @@
                     <img src="img/become-a-walker-partner-program-f261b8b128cfd6d86b2a8e8c634cd05f.webp" alt="" class="src">
                 </div>
             </div>
-
         </div>
     </div>
     <img src="img/back.svg" alt="" class="src">
+    <div class="video-content">
+            <p class="video-container-header">Hear from Pet Caregivers like you
+            </p>
+        <div class="video-all">
+            <div>
+                <div class="video-container-content">
+                    <div class="video-content-left">
+                        <p class="video-content-text">I’m getting paid to hang out with dogs, explore LA, get some sunshine, get some exercise. It’s a really awesome gig!
+                        </p>
+                    </div>
+                    <div class="video-content-right">
+                        <div class="video-content-icon">
+                            <img src="img/walker_katie-17aca11c1fe7035cd2364f4896539b89.webp" alt="" class="src">
+                        </div>
+                    </div>
+                    <img class="play-button" src="img/play-button.png" alt="">
+                </div>
+                <div class="video-signature">
+                    <p class="left-signature">Katie M.</p>
+                    <p class="right-signature">Dog Walker in Los Angeles</p>
+                </div>
+            </div>
+            <div>
+                <div class="video-container-content">
+                    <div class="video-content-left">
+                        <p class="video-content-text">Wag! motivates me to get out &amp; be active. Some of my favorite NY memories are because of Wag! and my furry friends.
+                        </p>
+                    </div>
+                    <div class="video-content-right">
+                        <div class="video-content-icon">
+                            <img src="img/walker_kelsey-49dcadae9bcf212f024bd4bcc88856bf.png" alt="" class="src">
+                        </div>
+                    </div>
+                    <img class="play-button" src="img/play-button.png" alt="">
+                </div>
+                <div class="video-signature">
+                    <p class="left-signature">Kelsey V.</p>
+                    <p class="right-signature">Dog Walker in New York</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="pet-caregivers">
+        <div class="pet-caregivers-container">
+            <p class="pet-caregivers-header">We've been around the block</p>
+            <div class="pet-caregivers-container-content">
+                    <div class="pet-content">
+                        <div class="pet-caregivers-content">
+                            <div class="pet-caregivers-left">
+                                <p class="pet-caregivers-first">400K+</p>
+                                <p class="pet-caregivers-second">Pet Caregivers</p>
+                            </div>
+                            <p class="pet-caregivers-right">Our community of 400,000+ Pet Caregivers nationwide are dog people, and it shows.
+                            </p>
+                        </div>
+                        <div class="pet-caregivers-content">
+                            <div class="pet-caregivers-left">
+                                <p class="pet-caregivers-first">5.3K+</p>
+                                <p class="pet-caregivers-second">Cities across the U.S.</p>
+                            </div>
+                            <p class="pet-caregivers-right">Pet Caregivers with Wag! have a trusted record of experience with over 12 million pet care services, including Sitting, Walking, Boarding & Training, across 5,300+ cities in all 50 U.S. states.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="pet-content">
+                        <div class="pet-caregivers-content">
+                            <div class="pet-caregivers-left">
+                                <p class="pet-caregivers-first">16M+</p>
+                                <p class="pet-caregivers-second">Meals donated</p>
+                            </div>
+                            <p class="pet-caregivers-right"> We’ve donated over 16 million meals! A portion of our proceeds from the walks you book help to feed shelter dogs in your area.
+                            </p>
+                        </div>
+                        <div class="pet-caregivers-content">
+                            <div class="pet-caregivers-left">
+                                <p class="pet-caregivers-first">99%</p>
+                                <p class="pet-caregivers-second">5-star reviews</p>
+                            </div>
+                            <p class="pet-caregivers-right">Making Pet Parents happy is what we do best — 99% of Wag! services result in a 5-star review.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            <div class="pet-caregivers-button-container">
+                <div class="pet-caregivers-button">
+                    <button class="pet-button" type="button">Sing up now</button>
+                </div>
+                <p class="pet-button-text">Have some questions? Visit our FAQ page
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr height="1px" class="footer-line">
     <div class="footer">
         <div class="footer-container">
-            <p class="footer-header">Hear from Pet Caregivers like you
-            </p>
+            <div class="footer-left">
+                <div class="footer-name">
+                    <p>© 2023 Wag Labs, Inc. All rights reserved.</p>
+                </div>
+                <a class="footer-url" href="https://safety.wagwalking.com/privacy">Privacy policy</a>
+                <a class="footer-url" href="https://safety.wagwalking.com/privacy">CA Privacy</a>
+                <a class="footer-url" href="https://safety.wagwalking.com/privacy">Terms & conditions</a>
+                <a class="footer-url" href="https://safety.wagwalking.com/privacy">Accessibility</a>
+                <a class="footer-url" href="https://safety.wagwalking.com/privacy">Transparency</a>
+            </div>
+            <div class="footer-right">
+                <svg viewBox="0 0 30 30" color="#ADADAD" display="inline-block" focusable="false" font-size="1.875rem" height="1em" style="fill:currentColor;user-select:none" width="1em" aria-hidden="true" class="sc-AxjAm iKXaos"><defs><path id="a" d="M.00176.00117H30v29.7862H.00176z"></path></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"></use></mask><path fill="currentColor" d="M30 14.9847C30 6.70889 23.28428 0 15 0 6.71572 0 0 6.70888 0 14.9847c0 7.4793 5.48528 13.67853 12.65625 14.80268V19.31623h-3.8086V14.9847h3.8086v-3.30132c0-3.75554 2.2394-5.82999 5.66572-5.82999 1.64113 0 3.35772.29267 3.35772.29267v3.68764h-1.89147c-1.86337 0-2.44447 1.15509-2.44447 2.3401v2.8109h4.16016l-.66504 4.33152h-3.49512v10.47115C24.51472 28.66323 30 22.464 30 14.9847" mask="url(#b)"></path><path fill="#EEE" d="M20.81184 19.3434l.66253-4.33289h-4.14443v-2.81179c0-1.1854.57891-2.34085 2.43523-2.34085h1.88431V6.16905s-1.7101-.29276-3.34501-.29276c-3.41337 0-5.6443 2.0751-5.6443 5.83185v3.30237h-3.7942v4.3329h3.7942v10.4745c.7608.11973 1.54056.18209 2.33489.18209.79433 0 1.57409-.06236 2.33488-.1821V19.3434h3.4819" mask="url(#b)"></path></g></svg>
+                <svg viewBox="0 0 30 30" color="#ADADAD" display="inline-block" focusable="false" font-size="1.875rem" height="1em" style="fill:currentColor;user-select:none" width="1em" aria-hidden="true" class="sc-AxjAm iKXaos"><defs><path id="a" d="M0 .00946h29.99054v29.98697H0z"></path></defs><g fill="none" fill-rule="evenodd"><g><mask id="b" fill="#fff"><use xlink:href="#a"></use></mask><path fill="currentColor" d="M14.9953.00946c-4.0725 0-4.58316.01727-6.18256.09024C7.21667.1725 6.1266.42601 5.1728.79673c-.98607.38315-1.82232.89589-2.65601 1.72952-.83364.83369-1.34637 1.66994-1.72953 2.65601C.41655 6.13607.16304 7.22613.09024 8.8222.01726 10.4216 0 10.93226 0 15.00476c0 4.07244.01726 4.5831.09024 6.1825.0728 1.59607.3263 2.68613.69702 3.63994.38316.98607.8959 1.82232 1.72953 2.65601.83369.83364 1.66994 1.34637 2.656 1.72959.95382.37065 2.04388.62416 3.63995.69696C10.41214 29.98274 10.9228 30 14.9953 30c4.07244 0 4.5831-.01726 6.1825-.09024 1.59607-.0728 2.68613-.3263 3.63994-.69696.98607-.38322 1.82232-.89595 2.65601-1.72959.83363-.83369 1.34637-1.66994 1.72958-2.656.37066-.95382.62417-2.04388.69697-3.63995.07297-1.5994.09024-2.11006.09024-6.1825 0-4.0725-.01727-4.58315-.09024-6.18256-.0728-1.59607-.32631-2.68613-.69697-3.63994-.38321-.98607-.89595-1.82232-1.72958-2.65601-.83369-.83363-1.66994-1.34637-2.65601-1.72952C23.86393.426 22.77387.1725 21.1778.0997 19.5784.02673 19.06774.00946 14.9953.00946zm0 2.70185c4.00387 0 4.47815.0153 6.05934.08744 1.46203.06667 2.25601.31095 2.7844.51631.69995.27202 1.19947.59696 1.72417 1.12173.52477.5247.8497 1.02422 1.12173 1.72416.20536.5284.44964 1.32238.51631 2.7844.07214 1.5812.08744 2.05548.08744 6.05941 0 4.00387-.0153 4.47816-.08744 6.05935-.06667 1.46202-.31095 2.256-.51631 2.7844-.27202.69994-.59696 1.19947-1.12173 1.72417-.5247.52476-1.02422.8497-1.72416 1.12172-.5284.20536-1.32238.44965-2.7844.51631-1.58096.07215-2.05519.08744-6.05935.08744-4.00423 0-4.4784-.0153-6.0594-.08744-1.46203-.06666-2.25602-.31095-2.78441-.5163-.69994-.27203-1.19947-.59697-1.72417-1.12173-.5247-.5247-.8497-1.02423-1.12172-1.72417-.20536-.5284-.44965-1.32238-.51631-2.7844-.07215-1.5812-.08744-2.05548-.08744-6.05935 0-4.00393.0153-4.47821.08744-6.0594.06666-1.46203.31095-2.25601.5163-2.7844.27203-.69995.59697-1.19947 1.12173-1.72417.5247-.52477 1.02423-.8497 1.72417-1.12173.5284-.20536 1.32238-.44964 2.7844-.51631 1.5812-.07214 2.05548-.08744 6.0594-.08744z" mask="url(#b)"></path></g><path fill="currentColor" d="M14.94234 20.03846c-2.75085 0-4.9808-2.22995-4.9808-4.98074 0-2.75085 2.22995-4.9808 4.9808-4.9808 2.75079 0 4.98074 2.22995 4.98074 4.9808 0 2.75079-2.22995 4.98074-4.98074 4.98074zm0-12.65384c-4.23778 0-7.6731 3.43532-7.6731 7.6731 0 4.23772 3.43532 7.67305 7.6731 7.67305 4.23772 0 7.67304-3.43533 7.67304-7.67305 0-4.23778-3.43532-7.6731-7.67304-7.6731zM24.8077 6.9808c0 .98775-.80075 1.78843-1.7885 1.78843-.98769 0-1.78843-.80068-1.78843-1.78843s.80074-1.7885 1.78843-1.7885c.98775 0 1.7885.80075 1.7885 1.7885"></path></g></svg>
+                <svg viewBox="0 0 30 30" color="#ADADAD" display="inline-block" focusable="false" font-size="1.875rem" height="1em" style="fill:currentColor;user-select:none" width="1em" aria-hidden="true" class="sc-AxjAm iKXaos"><defs><path id="a" d="M0 0h30v30H0z"></path></defs><g fill="none" fill-rule="evenodd"><mask id="b" fill="#fff"><use xlink:href="#a"></use></mask><path fill="currentColor" d="M22.53353 12.15607c.0072.15503.01035.31088.01035.46748 0 4.77817-3.63728 10.28843-10.28843 10.28843-2.04247 0-3.9426-.59866-5.54295-1.6242.28297.03337.57082.0501.86257.0501 1.69426 0 3.25328-.57795 4.49115-1.54793-1.58294-.0294-2.9178-1.0749-3.37807-2.51153.2202.04216.44678.06526.67972.06526.32993 0 .64958-.04455.95326-.1272-1.65443-.33158-2.90108-1.79363-2.90108-3.5451 0-.01583 0-.03098.00082-.04605.48735.27105 1.04468.4341 1.6377.45232-.97072-.64793-1.60912-1.75538-1.60912-3.00998 0-.66225.17888-1.28317.48975-1.8174 1.78327 2.1879 4.44818 3.62693 7.45343 3.77798-.06203-.26475-.09383-.54068-.09383-.82447 0-1.99635 1.61948-3.61576 3.61658-3.61576 1.03987 0 1.97962.43958 2.63947 1.14248.82365-.16222 1.59728-.46357 2.29605-.87772-.2703.84427-.84352 1.55265-1.59 2.00025.7314-.08746 1.4286-.2814 2.0766-.56926-.4842.7251-1.09793 1.36193-1.80397 1.8723zM15 0C6.71572 0 0 6.71572 0 15c0 8.28428 6.71572 15 15 15 8.28428 0 15-6.71572 15-15 0-8.28428-6.71572-15-15-15z" mask="url(#b)"></path></g></svg>
+                <svg viewBox="0 0 30 30" color="#ADADAD" display="inline-block" focusable="false" font-size="1.875rem" height="1em" style="fill:currentColor;user-select:none" width="1em" aria-hidden="true" class="sc-AxjAm iKXaos"><path fill="currentColor" fill-rule="evenodd" d="M15.678.01h.315l.851.001c2.438.006 3.017.029 4.334.089 1.596.073 2.686.326 3.64.697a7.35 7.35 0 012.656 1.73 7.351 7.351 0 011.73 2.655c.37.954.623 2.044.696 3.64.063 1.364.084 1.937.09 4.602V16.585c-.006 2.666-.027 3.238-.09 4.602-.073 1.596-.326 2.686-.697 3.64a7.351 7.351 0 01-1.73 2.656 7.351 7.351 0 01-2.655 1.73c-.954.37-2.044.624-3.64.697-1.364.062-1.937.084-4.602.089H13.415c-2.666-.005-3.238-.027-4.602-.09-1.596-.072-2.686-.326-3.64-.696a7.351 7.351 0 01-2.656-1.73 7.35 7.35 0 01-1.73-2.656c-.37-.954-.624-2.044-.697-3.64-.06-1.317-.082-1.896-.088-4.333L0 16.003v-1.681-.315l.002-.851c.004-1.567.014-2.366.037-3.087l.013-.357c.01-.277.023-.56.038-.89.073-1.596.327-2.686.697-3.64a7.35 7.35 0 011.73-2.656A7.35 7.35 0 015.173.796C6.127.427 7.217.174 8.813.1c.329-.015.612-.028.89-.039L10.06.05c.72-.023 1.52-.034 3.086-.038l.851-.001h.316zM19.828 4v.007h-3.662v13.14c.552 7.017-6.082 5.954-6.594 2.364-.266-1.875.691-2.938 2.38-3.505a11.048 11.048 0 011.761-.43v-3.702c-7.59.27-9.04 7.023-6.673 10.87 3.682 5.98 12.842 3.373 12.842-4.97v-6.567c1.801 1.083 3.35 1.657 5.118 1.485v-3.51c-3.051-.199-4.806-2.06-5.171-5.182z"></path></svg>
+            </div>
         </div>
     </div>
 </div>
